# SailSwarmSwIM

./: .gitignore  .gitmodules  120thread.sh  FLOCKING_ANG_SLOW.md  README.md  RunBoidsFlocking.sh  RunDispersion.sh  ScriptFlocking.sh  compare_flocking_vs_ang_slow.py  pyproject.toml  requirements.txt
SwarmSwIM/: agg_nav_v2.py  aggregation_nav.py  aggregation_nav_v1.py  aggregation_nav_v2.py  animator2D.py  boids_flocking.py  dispersion_nav.py  flocking_ang_slow.py  flocking_nav.py  plot10.py  plot10_area_and_wind.py  plot10_dispersion.py  plot10_only_area.py  plotsingle.py  regatta_nav.py  sim_class.py  sim_functions.py
SwarmSwIM/analysis/: __init__.py  plot10.py  plot10_boids_flocking.py  plot10_only_area.py  plotaggregate.py  plotsingle.py
SwarmSwIM/behaviors/: __init__.py  agg_nav_v2.py  aggregation_nav.py  boids_flocking.py  flocking_ang_slow.py  flocking_battery_nav.py  flocking_nav.py  regatta_nav.py
SwarmSwIM/sail_extension/: __init__.py  flocking.xml  physics.py  regatta.xml  sail_agent.py  wind_plotter.py
SwarmSwIM/sensors/: battery.py  collision_avoidance.py  comm.py
SwarmSwIM/simv1/: pyvenv.cfg
docs/:  requirements.txt  requirements.txt
docs/source/: conf.py  index.md
examples/: example2Danimation.py
results/: README.md
results/aggregation/: README.md
results/aggregation_v2/: README.md
results/flocking/: README.md
results/flocking_slow/: README.md
results/misc/: README.md
scripts/: 120thread.sh  RunAggregation.sh  RunBattery.sh  RunDispersion.sh  RunFlocking.sh  ScriptFlocking.sh
(+1 files in other folders)
