[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SwarmSwIM"
version = "0.3.0"
description = "Simulator for underwater swarm robotics"
readme = "README.md"
authors = [
  { name = "Saverio Iacoponi", email = "saverio.iacoponi@ku.ac.ae" }
]
requires-python = ">=3.8"
dependencies = [
  "numpy~=1.24.3",
  "matplotlib~=3.6.0",
  "fastapi~=0.116.1",
  "uvicorn~=0.35.0",
  "opencv-python~=4.7.0.72"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
SwarmSwIM = ["*.xml"]
